WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38770
[EFL] Fix RenderThemeEfl build
https://bugs.webkit.org/show_bug.cgi?id=38770
Summary
[EFL] Fix RenderThemeEfl build
Leandro Pereira
Reported
2010-05-07 13:20:20 PDT
RenderThemeEfl.cpp can't be compiled with GCC 4.5 because it references RenderThemeEfl::RenderThemeEfl instead of RenderThemeEfl. (Probably GCC <= 4.4 was less pickier about this.) Attached patch fixes this.
Attachments
Fix RenderThemeEfl build
(10.57 KB, patch)
2010-05-07 13:20 PDT
,
Leandro Pereira
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leandro Pereira
Comment 1
2010-05-07 13:20:58 PDT
Created
attachment 55414
[details]
Fix RenderThemeEfl build
WebKit Commit Bot
Comment 2
2010-05-08 11:18:07 PDT
Comment on
attachment 55414
[details]
Fix RenderThemeEfl build Clearing flags on attachment: 55414 Committed
r59030
: <
http://trac.webkit.org/changeset/59030
>
WebKit Commit Bot
Comment 3
2010-05-08 11:18:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug