third_party/WebKit/WebCore/platform/efl/RenderThemeEfl.cpp
@@ -302,7 +302,7 @@ PassRefPtr<RenderTheme> RenderTheme::themeForPage(Page* page)
 
 static void renderThemeEflColorClassSelectionActive(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
@@ -313,7 +313,7 @@ static void renderThemeEflColorClassSelectionActive(void* data, Evas_Object* o, 
 
 static void renderThemeEflColorClassSelectionInactive(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
@@ -324,7 +324,7 @@ static void renderThemeEflColorClassSelectionInactive(void* data, Evas_Object* o
 
 static void renderThemeEflColorClassFocusRing(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, 0, 0, 0, 0, 0, 0, 0, 0))
@@ -335,7 +335,7 @@ static void renderThemeEflColorClassFocusRing(void* data, Evas_Object* o, const 
 
 static void renderThemeEflColorClassButtonText(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
@@ -346,7 +346,7 @@ static void renderThemeEflColorClassButtonText(void* data, Evas_Object* o, const
 
 static void renderThemeEflColorClassComboText(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
@@ -357,7 +357,7 @@ static void renderThemeEflColorClassComboText(void* data, Evas_Object* o, const 
 
 static void renderThemeEflColorClassEntryText(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
 
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
@@ -368,7 +368,7 @@ static void renderThemeEflColorClassEntryText(void* data, Evas_Object* o, const 
 
 static void renderThemeEflColorClassSearchText(void* data, Evas_Object* o, const char* signal, const char* source)
 {
-    RenderThemeEfl::RenderThemeEfl* that = static_cast<RenderThemeEfl::RenderThemeEfl *>(data);
+    RenderThemeEfl* that = static_cast<RenderThemeEfl *>(data);
     int fr, fg, fb, fa, br, bg, bb, ba;
     if (!edje_object_color_class_get(o, source, &fr, &fg, &fb, &fa, &br, &bg, &bb, &ba, 0, 0, 0, 0))
         return;
@@ -733,7 +733,7 @@ int RenderThemeEfl::baselinePosition(const RenderObject* o) const
 void RenderThemeEfl::adjustCheckboxStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustCheckboxStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustCheckboxStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, CheckBox);
@@ -754,7 +754,7 @@ bool RenderThemeEfl::paintCheckbox(RenderObject* o, const RenderObject::PaintInf
 void RenderThemeEfl::adjustRadioStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustRadioStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustRadioStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, RadioButton);
@@ -775,7 +775,7 @@ bool RenderThemeEfl::paintRadio(RenderObject* o, const RenderObject::PaintInfo& 
 void RenderThemeEfl::adjustButtonStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustButtonStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustButtonStyle(selector, style, e);
         return;
     }
 
@@ -798,7 +798,7 @@ bool RenderThemeEfl::paintButton(RenderObject* o, const RenderObject::PaintInfo&
 void RenderThemeEfl::adjustMenuListStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustMenuListStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustMenuListStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, ComboBox);
@@ -816,7 +816,7 @@ bool RenderThemeEfl::paintMenuList(RenderObject* o, const RenderObject::PaintInf
 void RenderThemeEfl::adjustTextFieldStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustTextFieldStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustTextFieldStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, TextField);
@@ -844,7 +844,7 @@ bool RenderThemeEfl::paintTextArea(RenderObject* o, const RenderObject::PaintInf
 void RenderThemeEfl::adjustSearchFieldDecorationStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldDecorationStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldDecorationStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, SearchFieldDecoration);
@@ -860,7 +860,7 @@ bool RenderThemeEfl::paintSearchFieldDecoration(RenderObject* o, const RenderObj
 void RenderThemeEfl::adjustSearchFieldResultsButtonStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldResultsButtonStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldResultsButtonStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, SearchFieldResultsButton);
@@ -876,7 +876,7 @@ bool RenderThemeEfl::paintSearchFieldResultsButton(RenderObject* o, const Render
 void RenderThemeEfl::adjustSearchFieldResultsDecorationStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldResultsDecorationStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldResultsDecorationStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, SearchFieldResultsDecoration);
@@ -892,7 +892,7 @@ bool RenderThemeEfl::paintSearchFieldResultsDecoration(RenderObject* o, const Re
 void RenderThemeEfl::adjustSearchFieldCancelButtonStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldCancelButtonStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldCancelButtonStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, SearchFieldCancelButton);
@@ -908,7 +908,7 @@ bool RenderThemeEfl::paintSearchFieldCancelButton(RenderObject* o, const RenderO
 void RenderThemeEfl::adjustSearchFieldStyle(CSSStyleSelector* selector, RenderStyle* style, Element* e) const
 {
     if (!m_page && e && e->document()->page()) {
-        static_cast<RenderThemeEfl::RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldStyle(selector, style, e);
+        static_cast<RenderThemeEfl*>(e->document()->page()->theme())->adjustSearchFieldStyle(selector, style, e);
         return;
     }
     adjustSizeConstraints(style, SearchField);
